multi marker track on frontend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>The Game of Thrones</title>
+    <script src="js/models/tracks/marker.js"></script>
     <script src="js/models/tracks/track.js"></script>
     <script src="js/models/tracks/rounds_track.js"></script>
-    <script src="js/models/tracks/castles_stark_track.js"></script>
+    <script src="js/models/tracks/castles_track.js"></script>
     <script src="js/index.js"></script>
 </head>
 <body>
 <button id="next_round">Next Round</button>
+<button id="move_stark_castle">Move Stark Castle</button>
+<button id="move_baratheon_castle">Move Baratheon Castle</button>
     <canvas id="table" width="3600" height="2700"></canvas>
     <img src="img/table.jpg" alt="" width="0" height="0">
     <img src="img/board.png" alt="" width="0" height="0">
@@ -18,5 +21,6 @@
     <img src="img/victory_track.jpg" alt="" width="0" height="0">
     <img src="img/round_marker.png" alt="" width="0" height="0">
     <img src="img/castles/stark.png" alt="" width="0" height="0">
+    <img src="img/castles/baratheon.png" alt="" width="0" height="0">
 </body>
 </html>
