--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
     <script src="js/models/tracks/track.js"></script>
     <script src="js/models/tracks/rounds_track.js"></script>
     <script src="js/models/tracks/castles_track.js"></script>
+    <script src="js/models/tracks/supply_track.js"></script>
     <script src="js/index.js"></script>
 </head>
 <body>
@@ -16,11 +17,14 @@
     <canvas id="table" width="3600" height="2700"></canvas>
     <img src="img/table.jpg" alt="" width="0" height="0">
     <img src="img/board.png" alt="" width="0" height="0">
-    <img src="img/influence_track.jpg" alt="" width="0" height="0">
-    <img src="img/rounds_track.jpg" alt="" width="0" height="0">
-    <img src="img/victory_track.jpg" alt="" width="0" height="0">
+    <img src="img/tracks/influence.jpg" alt="" width="0" height="0">
+    <img src="img/tracks/rounds.jpg" alt="" width="0" height="0">
+    <img src="img/tracks/victory.jpg" alt="" width="0" height="0">
+    <img src="img/tracks/supply.jpg" alt="" width="0" height="0">
     <img src="img/round_marker.png" alt="" width="0" height="0">
     <img src="img/castles/stark.png" alt="" width="0" height="0">
     <img src="img/castles/baratheon.png" alt="" width="0" height="0">
+    <img src="img/barrels/stark.png" alt="" width="0" height="0">
+    <img src="img/barrels/baratheon.png" alt="" width="0" height="0">
 </body>
 </html>
