influence track frontend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,9 @@
     <title>The Game of Thrones</title>
     <script src="js/models/tracks/marker.js"></script>
     <script src="js/models/tracks/track.js"></script>
+    <script src="js/models/tracks/iron_throne_track.js"></script>
+    <script src="js/models/tracks/fiefdoms_track.js"></script>
+    <script src="js/models/tracks/kings_court_track.js"></script>
     <script src="js/models/tracks/rounds_track.js"></script>
     <script src="js/models/tracks/castles_track.js"></script>
     <script src="js/models/tracks/supply_track.js"></script>
@@ -17,7 +20,9 @@
     <canvas id="table" width="3600" height="2700"></canvas>
     <img src="img/table.jpg" alt="" width="0" height="0">
     <img src="img/board.png" alt="" width="0" height="0">
-    <img src="img/tracks/influence.jpg" alt="" width="0" height="0">
+    <img src="img/tracks/iron_throne.jpg" alt="" width="0" height="0">
+    <img src="img/tracks/fiefdoms.jpg" alt="" width="0" height="0">
+    <img src="img/tracks/kings_court.jpg" alt="" width="0" height="0">
     <img src="img/tracks/rounds.jpg" alt="" width="0" height="0">
     <img src="img/tracks/victory.jpg" alt="" width="0" height="0">
     <img src="img/tracks/supply.jpg" alt="" width="0" height="0">
@@ -26,5 +31,7 @@
     <img src="img/castles/baratheon.png" alt="" width="0" height="0">
     <img src="img/barrels/stark.png" alt="" width="0" height="0">
     <img src="img/barrels/baratheon.png" alt="" width="0" height="0">
+    <img src="img/tokens/stark.png" alt="" width="0" height="0">
+    <img src="img/tokens/lannister.png" alt="" width="0" height="0">
 </body>
 </html>
