--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,6 +11,7 @@
     <script src="js/models/tracks/rounds_track.js"></script>
     <script src="js/models/tracks/castles_track.js"></script>
     <script src="js/models/tracks/supply_track.js"></script>
+    <script src="js/models/tracks/wildings_track.js"></script>
     <script src="js/index.js"></script>
 </head>
 <body>
@@ -19,7 +20,8 @@
 <button id="move_baratheon_castle">Move Baratheon Castle</button>
     <canvas id="table" width="3600" height="2700"></canvas>
     <img src="img/table.jpg" alt="" width="0" height="0">
-    <img src="img/board.png" alt="" width="0" height="0">
+    <img src="img/tracks/wildings.jpg" alt="" width="0" height="0">
+    <img src="img/board.jpg" alt="" width="0" height="0">
     <img src="img/tracks/iron_throne.jpg" alt="" width="0" height="0">
     <img src="img/tracks/fiefdoms.jpg" alt="" width="0" height="0">
     <img src="img/tracks/kings_court.jpg" alt="" width="0" height="0">
@@ -27,6 +29,7 @@
     <img src="img/tracks/victory.jpg" alt="" width="0" height="0">
     <img src="img/tracks/supply.jpg" alt="" width="0" height="0">
     <img src="img/round_marker.png" alt="" width="0" height="0">
+    <img src="img/wildings_marker.png" alt="" width="0" height="0">
     <img src="img/castles/stark.png" alt="" width="0" height="0">
     <img src="img/castles/baratheon.png" alt="" width="0" height="0">
     <img src="img/barrels/stark.png" alt="" width="0" height="0">
