all cards frontend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,12 +12,22 @@
     <script src="js/models/tracks/castles_track.js"></script>
     <script src="js/models/tracks/supply_track.js"></script>
     <script src="js/models/tracks/wildings_track.js"></script>
+
+    <script src="js/models/cards/card.js"></script>
+    <script src="js/models/decks/deck.js"></script>
+    <script src="js/models/decks/westeros.js"></script>
+    <script src="js/models/decks/westeros1.js"></script>
+    <script src="js/models/decks/westeros2.js"></script>
+    <script src="js/models/decks/westeros3.js"></script>
+    <script src="js/models/decks/wildings.js"></script>
     <script src="js/index.js"></script>
 </head>
 <body>
 <button id="next_round">Next Round</button>
 <button id="move_stark_castle">Move Stark Castle</button>
 <button id="move_baratheon_castle">Move Baratheon Castle</button>
+<button id="westeros1">Open Card 1st deck</button>
+<button id="wildings">Open Wildings Card</button>
     <canvas id="table" width="3600" height="2700"></canvas>
     <img src="img/table.jpg" alt="" width="0" height="0">
     <img src="img/tracks/wildings.jpg" alt="" width="0" height="0">
@@ -36,5 +46,37 @@
     <img src="img/barrels/baratheon.png" alt="" width="0" height="0">
     <img src="img/tokens/stark.png" alt="" width="0" height="0">
     <img src="img/tokens/lannister.png" alt="" width="0" height="0">
+
+    <img src="img/cards/westeros/deck1/top.png" alt="" width="0" height="0">
+    <img src="img/cards/westeros/deck1/recruit.png" alt="" width="0" height="0">
+    <img src="img/cards/westeros/deck1/throne.png" alt="" width="0" height="0">
+    <img src="img/cards/westeros/deck1/winter.png" alt="" width="0" height="0">
+    <img src="img/cards/westeros/deck1/summer.png" alt="" width="0" height="0">
+    <img src="img/cards/westeros/deck1/supply.png" alt="" width="0" height="0">
+    <img src="img/cards/westeros/deck2/top.png" alt="" width="0" height="0">
+    <img src="img/cards/westeros/deck2/black_wings.png" alt="" width="0" height="0">
+    <img src="img/cards/westeros/deck2/summer.png" alt="" width="0" height="0">
+    <img src="img/cards/westeros/deck2/winter.png" alt="" width="0" height="0">
+    <img src="img/cards/westeros/deck2/kings_fight.png" alt="" width="0" height="0">
+    <img src="img/cards/westeros/deck2/game_of_thrones.png" alt="" width="0" height="0">
+    <img src="img/cards/westeros/deck3/top.png" alt="" width="0" height="0">
+    <img src="img/cards/westeros/deck3/crowds.png" alt="" width="0" height="0">
+    <img src="img/cards/westeros/deck3/rains.png" alt="" width="0" height="0">
+    <img src="img/cards/westeros/deck3/web_of_lie.png" alt="" width="0" height="0">
+    <img src="img/cards/westeros/deck3/sea_of_storms.png" alt="" width="0" height="0">
+    <img src="img/cards/westeros/deck3/might.png" alt="" width="0" height="0">
+    <img src="img/cards/westeros/deck3/wildings.png" alt="" width="0" height="0">
+    <img src="img/cards/westeros/deck3/storm_of_knives.png" alt="" width="0" height="0">
+    <img src="img/cards/wildings/top.png" alt="" width="0" height="0">
+    <img src="img/cards/wildings/a.png" alt="" width="0" height="0">
+    <img src="img/cards/wildings/b.png" alt="" width="0" height="0">
+    <img src="img/cards/wildings/c.png" alt="" width="0" height="0">
+    <img src="img/cards/wildings/d.png" alt="" width="0" height="0">
+    <img src="img/cards/wildings/e.png" alt="" width="0" height="0">
+    <img src="img/cards/wildings/f.png" alt="" width="0" height="0">
+    <img src="img/cards/wildings/g.png" alt="" width="0" height="0">
+    <img src="img/cards/wildings/h.png" alt="" width="0" height="0">
+
+    <img src="img/units/baratheon/siege_engine.png" alt="" width="0" height="0">
 </body>
 </html>
